log
Sat 18 May 2024 03:39:04 PM UTC: 
 tests:  0|5
total_score: 0/70
211a860
Sat 18 May 2024 03:43:42 PM UTC: 
 sudoku.c | 38 ++++++++++++++++++++++++++------------
 1 file changed, 26 insertions(+), 12 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:63:36: error: expected ‘]’ before ‘;’ token
   63 |                   arr[n->sudo[i][k];
      |                                    ^
      |                                    ]
sudoku.c:63:22: error: statement with no effect [-Werror=unused-value]
   63 |                   arr[n->sudo[i][k];
      |                   ~~~^~~~~~~~~~~~~~~
   64 |                 }
      |                 ~     
sudoku.c:63:37: error: expected ‘;’ before ‘}’ token
   63 |                   arr[n->sudo[i][k];
      |                                     ^
      |                                     ;
   64 |                 }
      |                 ~                    
cc1: all warnings being treated as errors
Compilation failed
083d3f5
Sat 18 May 2024 03:43:52 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:63:22: error: statement with no effect [-Werror=unused-value]
   63 |                   arr[n->sudo[i][k]];
      |                   ~~~^~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
90a0ec4
Sat 18 May 2024 03:44:25 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
07244f7
Sat 18 May 2024 03:53:11 PM UTC: 
 sudoku.c | 26 ++++++--------------------
 1 file changed, 6 insertions(+), 20 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:46:24: error: unused variable ‘submatrices’ [-Werror=unused-variable]
   46 |   int filas, columnas, submatrices;
      |                        ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
951bda2
Sat 18 May 2024 03:53:18 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d62a5e0
Sat 18 May 2024 03:54:25 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
ebb28f4
Sat 18 May 2024 04:10:52 PM UTC: 
 sudoku.c | 53 +++++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 47 insertions(+), 6 deletions(-)
 tests:  3|4
total_score: 20/70
f0c47d6
Sat 18 May 2024 04:23:50 PM UTC: 
 sudoku.c | 46 ++++++++++++++++++++++++++++++----------------
 1 file changed, 30 insertions(+), 16 deletions(-)
 tests:  5|3
total_score: 35/70
3da5400
Sat 18 May 2024 04:29:16 PM UTC: 
 sudoku.c | 37 +++++++++++++++++++++++++++----------
 1 file changed, 27 insertions(+), 10 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodesIsValid’:
sudoku.c:128:42: error: passing argument 1 of ‘is_valid’ makes pointer from integer without a cast [-Werror=int-conversion]
  128 |             if (is_valid(adj->sudo[filas][columnas]))
      |                          ~~~~~~~~~~~~~~~~^~~~~~~~~~
      |                                          |
      |                                          int
sudoku.c:46:20: note: expected ‘Node *’ but argument is of type ‘int’
   46 | int is_valid(Node *n) {
      |              ~~~~~~^
cc1: all warnings being treated as errors
Compilation failed
412c0f3
Sat 18 May 2024 04:29:27 PM UTC: 
 sudoku.c | 21 ---------------------
 1 file changed, 21 deletions(-)
 tests:  5|3
total_score: 35/70
9aebe42
Sat 18 May 2024 04:30:01 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
793fc23
Sat 18 May 2024 04:31:50 PM UTC: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:105:30: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  105 |             Node *nuevoadj = adj->sudo[filas][columnas] = i + 1;
      |                              ^~~
cc1: all warnings being treated as errors
Compilation failed
b016f9a
Sat 18 May 2024 04:32:51 PM UTC: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 35/70
6c0ed7c
Sat 18 May 2024 04:36:58 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  3|4
total_score: 20/70
8919c7a
Sat 18 May 2024 04:37:37 PM UTC: 
 sudoku.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  5|3
total_score: 35/70
ec0e9d4
Sat 18 May 2024 04:38:58 PM UTC: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
85287d3
Sat 18 May 2024 04:44:30 PM UTC: 
 sudoku.c | 34 +++++++++++++++++++++++++---------
 1 file changed, 25 insertions(+), 9 deletions(-)
 tests:  0|0
fcb959d
Sat 18 May 2024 04:49:08 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f6f26e9
Sat 18 May 2024 04:50:07 PM UTC: 
 sudoku.c | 15 ---------------
 1 file changed, 15 deletions(-)
 tests:  6|2
total_score: 45/70
fb39484
Sat 18 May 2024 10:08:15 PM UTC: 
 sudoku.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  0|0
de48eb4
Sat 18 May 2024 10:09:19 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6f90301
Sat 18 May 2024 10:09:32 PM UTC: 
 sudoku.c | 27 ---------------------------
 1 file changed, 27 deletions(-)
 tests:  6|2
total_score: 45/70
216a868
Sat 18 May 2024 10:18:42 PM UTC: 
 sudoku.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
cee8945
Sat 18 May 2024 10:31:25 PM UTC: 
 sudoku.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
57029ee
Sat 18 May 2024 10:37:01 PM UTC: 
 sudoku.c | 20 +-------------------
 1 file changed, 1 insertion(+), 19 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:117:1: error: control reaches end of non-void function [-Werror=return-type]
  117 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5b6e418
Sat 18 May 2024 10:37:31 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘get_adj_nodes’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b6fafdd
Sat 18 May 2024 10:38:08 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:117:1: error: control reaches end of non-void function [-Werror=return-type]
  117 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
43708dc
Sat 18 May 2024 10:38:20 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
ee108fc
Sat 18 May 2024 10:38:32 PM UTC: 
 sudoku.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  0|0
26956c7
Sat 18 May 2024 10:38:55 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
efa2a6d
Sat 18 May 2024 10:42:11 PM UTC: 
 sudoku.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  7|1
total_score: 55/70
66c404b
Sat 18 May 2024 10:44:21 PM UTC: 
 sudoku.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
4c4eb72
